Changelog
=========

3.6.3 (unreleased)
------------------

- Fixed the finder to honor the "Allow folder creation" option.
  [dokai]

- Added i18n support
  [giacomos]

- Added Italian translation
  [giacomos]


3.6.2 (2011-12-12)
------------------

- Describe in README how to release to ensure ``ckeditor`` code is included in
  the egg.
  [gotcha]


3.6.2b2 (2011-12-12)
--------------------

- Nothing changed yet.


3.6.2b1 (2011-12-12)
--------------------

- use ckeditor 3.6.2
  [spereverde]

- Add ``ajaxsave`` plugin to allow asynchronous save.
  [gotcha]

- Use zest.releaser entry point to bundle ckeditor code.
  [gotcha]

3.6.1 (2011-07-14)
------------------

- Nothing changed yet.


3.6.1rc (2011-07-14)
--------------------

- use ckeditor 3.6.1
  [spereverde]

- some pep8 and pyflakes
  [spereverde]

- added control panel setting for templates_replaceContent
  [spereverde]

- add control panel setting for registration of custom templates
  [gotcha]

- Plone4.1 support - fix IVocabularyFactory import
  [msmith64]


3.4.1
-----

- use ckeditor 3.4.1
  [macadames]

- fix an error in set_media_type
  [macadames]

- fix an error in mediaupload session
  [macadames]


3.4
---

- use ckeditor 3.4

3.3.1b
------

- use ckeditor 3.3.1
  [macadames]

- icon for control panel is now in controlpanel.xml
  [macadames]

- Make control panel (and tests) running without errors with last Plone4 version ...
  The listTypesForInterface method was broken.
  [macadames]

- Use the new mediaupload attribute in collective.plonefinder
  (Force the selection of content-type in jquery.uploadify)
  [macadames]

- Added support for z3c.autoinclude so no zcml slugs will be needed for this package.
  [sneridagh]

3.2.1b
------

- image sizes selection added (use this new option provided by collective.plonefinder)

- some fixes for last collective.plonefinder usage.

3.2.1a
------

- use ckeditor 3.2.1

- plone 4 compliance :

  - remove iw.resourcetraverser dependency
